@@ -658,6 +658,48 @@ _s, _s, _s, _s, Aa, Aa, _s, _s, _s, _s
         [/unstore_unit]
     [/event]
 
+    [label]
+        x,y=7,11
+        text="test anim"
+    [/label]
+
+    [event]
+        name=moveto
+        first_time_only=no
+        [filter]
+            x=7
+            y=11
+	[/filter]
+	[object]
+            [effect]
+                apply_to=new_attack
+                name=ruby of fire
+                description= _ "ruby of fire"
+                icon=attacks/fireball.png
+                type=fire
+                range=ranged
+                [specials]
+                    {WEAPON_SPECIAL_MAGICAL}
+                [/specials]
+                damage=14
+                number=4
+            [/effect]
+
+            [effect]
+                apply_to=new_animation
+                [standing_anim]
+		    alpha=0.0~1.0
+
+
+                    [frame]
+                        begin=-2000
+                        end=0
+                    [/frame]
+                [/standing_anim]
+            [/effect]
+	[/object]
+    [/event]
+
 
   #capture connected villages near 13,2 for team 2
     [event]
